--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
 			<artifactId>fastdfs-client</artifactId>
 			<version>1.26.1-RELEASE</version>
 		</dependency>
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
 
 	</dependencies>
 
